fixed padding breaking text align

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ html {
 	color: inherit;
 	background-color: inherit;
 	text-decoration: none;
-	margin: 16.6px;
+	margin-top: 16.6px;
+	margin-left: 16.6px;
 	padding: 0px;
 	transition-duration: 0.5s;
     transition-timing-function: ease;
